name:               concurrency-cost
version:            0.1
synopsis:
    How (in-)expensive are Haskell's concurrency constructs.
Description:
    Benchmarks for several of Haskell's concurrency construcs.
license:            BSD3
license-file:       LICENSE
author:             Falko Peters
maintainer:         falko.peters@gmail.com
copyright:          Copyright (c) 2011 Falko Peters
category:           Database
build-type:         Simple
cabal-version:      >=1.8
homepage:           
bug-reports:        https://github.com/informatikr/Concurrency-Cost/issues

source-repository head
  type:     git
  location: https://github.com/informatikr/concurrency-cost
 
executable concurrency-cost
    main-is: Main.hs
    build-depends:
        base == 4.*,
        criterion == 0.6.*,
        mtl == 2.0.*,
        stm
    ghc-options: -Wall -rtsopts
    ghc-prof-options: -auto-all
